--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -151,7 +151,7 @@ jobs:
       - uses: gap-actions/setup-cygwin@v2
         if: ${{ runner.os == 'Windows' }}
         with:
-          extra-pkgs-to-install: 'm4,autoconf2.5,libmpc-devel,libmpfr-devel,pkg-config'
+          extra-pkgs-to-install: 'libmpc-devel,libmpfr-devel,pkg-config'
 
       # There are two cygwin installs on github actions (ours,
       # and a preinstalled one which we can't use as not enough packages are installed.
